# agent-rss

./: .gitignore  CLAUDE.md  README.md  config.yaml.template  examples.md  interests.md  pyproject.toml  rss_list.md
agent_rss/: __init__.py  __main__.py  config.py  db.py  email_sender.py  feed.py  main.py
agent_rss/llm/: __init__.py  base.py  claude.py  gemini.py  openai.py
